@@ -1,3 +1,10 @@
+2014-03-19  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* operation/snmpconsole/snmp_view.php,
+	include/functions_ui.php: fixed the view in fullscreen.
+	
+	Incident: #675
+
 2014-03-18  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* pandoradb.oracle.sql
